--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -13,6 +13,8 @@ concurrency:
   cancel-in-progress: true
 jobs:
   validate:
+    permissions:
+      contents: read
     env:
       UNITY_EDITORS: '' # set by the unity-setup action
       UNITY_HUB_PATH: '' # set by the unity-setup action
