Add Unity 5.x support

--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,10 @@ inputs:
     description: 'Unity License Client `services-config.json` encoded base base64 string. Required for `Floating` license activations.'
     required: false
     default: ''
+  license-version:
+    description: 'Must be one of `5.x` (Unity 5.x), `6.x` (Unity 2017+)'
+    required: false
+    default: '6.x'
 runs:
   using: 'node20'
   main: 'dist/index.js'
