--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -24,12 +24,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        unity-versions: [5.x, 2019.x, 2020.x, 2021.x, 2022.x, 6000.x]
+        unity-versions: ['5.6.7f1 (e80cc3114ac1)', 2019.x, 2020.x, 2021.x, 2022.x, 6000.x]
         include:
-          - unity-versions: 5.x
+          - unity-versions: '5.6.7f1 (e80cc3114ac1)'
             license-version: 5.x
           - os: ubuntu-latest
-            unity-versions: 5.x
+            unity-versions: '5.6.7f1 (e80cc3114ac1)'
             skip-editor: true # Unity 5.x doesn't have a (non-experimental) Linux build
     steps:
       - uses: actions/checkout@v4
